<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <Button
        android:id="@+id/fragment_settings_saveGameButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fragment_settings_saveGameButton_text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline12"
        android:textColor="@color/purple_200"
        app:strokeColor="@color/purple_200"
        app:strokeWidth="3dp"/>

    <TextView
        android:id="@+id/fragment_settings_saveGameNameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fragment_settings_saveGameNameLabel_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="@+id/fragment_settings_saveGameNameLabel"
        app:layout_constraintStart_toStartOf="@+id/fragment_settings_saveGameNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_saveGameNameLabel"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <Button
        android:id="@+id/fragment_settings_quitToAppHomeScreenButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_setting_quitToAppHomeScreenButton"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_settings_saveGameButton"
        app:layout_constraintStart_toStartOf="@+id/fragment_settings_saveGameButton"
        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_saveGameButton"
        android:textColor="@color/purple_200"
        app:strokeColor="@color/purple_200"
        app:strokeWidth="3dp"/>

    <Button
        android:id="@+id/fragment_settings_quitToHomeScreenButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_settings_quitToHomeScreenButton_text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_settings_quitToAppHomeScreenButton"
        app:layout_constraintStart_toStartOf="@+id/fragment_settings_quitToAppHomeScreenButton"
        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_quitToAppHomeScreenButton"
        android:textColor="@color/purple_200"
        app:strokeColor="@color/purple_200"
        app:strokeWidth="3dp"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="fragment_settings_saveGameButton,fragment_settings_quitToAppHomeScreenButton,fragment_settings_quitToHomeScreenButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>