<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fadingEdge="horizontal"
    android:stateListAnimator="@android:anim/fade_in">

    <TextView
        android:id="@+id/activity_saved_games_recyclerview_listitem_createdDateLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_saved_games_recyclerview_listitem_createdTextLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/activity_saved_games_recyclerview_listitem_createdTextLabel" />

    <TextView
        android:id="@+id/activity_saved_games_recyclerview_listitem_createdTextLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="24dp"
        android:text="@string/activity_saved_games_recyclerview_listitem_createdTextLabel_text"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_saved_games_recyclerview_listitem_gameTypeImageView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <ImageView
        android:id="@+id/activity_saved_games_recyclerview_listitem_gameTypeImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_saved_games_recyclerview_listitem_createdTextLabel"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_saved_games_recyclerview_listitem_nrOfDecksLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/activity_saved_games_recyclerview_listitem_nrOfDecksLabel_text"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/activity_saved_games_recyclerview_listitem_pointsToBeReachedLabel"
        app:layout_constraintEnd_toEndOf="@+id/activity_saved_games_recyclerview_listitem_pointsToBeReachedLabel"
        app:layout_constraintStart_toStartOf="@+id/activity_saved_games_recyclerview_listitem_createdDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/activity_saved_games_recyclerview_listitem_gameNameLabel" />

    <TextView
        android:id="@+id/activity_saved_games_recyclerview_listitem_nrOfDecksOutputLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_saved_games_recyclerview_listitem_nrOfDecksLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/activity_saved_games_recyclerview_listitem_nrOfDecksLabel" />

    <TextView
        android:id="@+id/activity_saved_games_recyclerview_listitem_pointsToBeReachedLabel"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/activity_saved_games_recyclerview_listitem_pointsToBeReachedLabel_text"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/activity_saved_games_recyclerview_listitem_createdDateLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/activity_saved_games_recyclerview_listitem_createdDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/activity_saved_games_recyclerview_listitem_nrOfDecksLabel" />

    <TextView
        android:id="@+id/activity_saved_games_recyclerview_listitem_pointsToBeReachedOutputLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/activity_saved_games_recyclerview_listitem_pointsToBeReachedLabel"
        app:layout_constraintEnd_toEndOf="@+id/activity_saved_games_recyclerview_listitem_nrOfDecksOutputLabel"
        app:layout_constraintStart_toStartOf="@+id/activity_saved_games_recyclerview_listitem_nrOfDecksOutputLabel"
        app:layout_constraintTop_toTopOf="@+id/activity_saved_games_recyclerview_listitem_pointsToBeReachedLabel" />

    <TextView
        android:id="@+id/activity_saved_games_recyclerview_listitem_gameNameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/activity_saved_games_recyclerview_listitem_gameNameLabel_text"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/activity_saved_games_recyclerview_listitem_nrOfDecksLabel"
        app:layout_constraintStart_toStartOf="@+id/activity_saved_games_recyclerview_listitem_nrOfDecksLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_saved_games_recyclerview_listitem_gameNameOutputLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/activity_saved_games_recyclerview_listitem_gameNameLabel"
        app:layout_constraintEnd_toEndOf="@+id/activity_saved_games_recyclerview_listitem_nrOfDecksOutputLabel"
        app:layout_constraintStart_toStartOf="@+id/activity_saved_games_recyclerview_listitem_nrOfDecksOutputLabel"
        app:layout_constraintTop_toTopOf="@+id/activity_saved_games_recyclerview_listitem_gameNameLabel"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>